loopfor.LoopFor.scala.code
var case=0
while (!estSurBiscuit()){avance()
                        case=case+1}
prendBiscuit()
for(x <- 0 to case){recule()}
poseBiscuit()